tests/ui/errors/remap-path-prefix-reverse.local-self.stderr
error[E0423]: expected value, found struct `remapped_dep::SomeStruct`
  --> $DIR/remap-path-prefix-reverse.rs:14:13
   |
LL |     let _ = remapped_dep::SomeStruct;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ help: use struct literal syntax instead: `remapped_dep::SomeStruct {}`
   |
  --> remapped-aux/remapped_dep.rs:4:0
   |
   = note: `remapped_dep::SomeStruct` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
